CMakeLists comments and updates for deb package install

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -28,5 +28,5 @@ target_include_directories(
 install(
 	TARGETS ${modLibName}
 	ARCHIVE
-	DESTINATION lib
+	DESTINATION lib # disto packages will use this (e.g. </usr/local>/lib
 	)
