--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,23 +17,30 @@ include(CTest)
 enable_testing()
 
 # project tree
+add_subdirectory(inc) # project library public interface (e.g. c++ headers)
 add_subdirectory(src) # project source code
 add_subdirectory(tst) # unit tests (check source code operation)
 add_subdirectory(vnv) # user/app validation tests
 
-# set(CPACK_PACKAGE_NAME ${PROJECT_NAME}) # default
-set(CPACK_PACKAGE_VENDOR "PackageVendor")
+# set(CPACK_PACKAGE_NAME ${PROJECT_NAME}) # same as default
+set(CPACK_PACKAGE_VENDOR "PackageVendor") # ? not used by debian generator?
 set(CPACK_PACKAGE_VERSION_MAJOR ${PROJECT_VERSION_MAJOR})
 set(CPACK_PACKAGE_VERSION_MINOR ${PROJECT_VERSION_MINOR})
 set(CPACK_PACKAGE_VERSION_PATCH ${PROJECT_VERSION_PATCH})
 set(CPACK_PACKAGE_VERSION_TWEAK ${PROJECT_VERSION_TWEAK})
-set(CPACK_DEBIAN_PACKAGE_MAINTAINER "PackageMaintainer")
-# override install location for testing this package
-# generally use default (don't set this)
-set(CPACK_PACKAGING_INSTALL_PREFIX "/tmp")
+
+# Override default install location for testing this package
+# In general default (no command here) will install to /usr/{lib,bin,...}
+# - but here, set package to isolated location for easier/safer testing
+set(CPACK_PACKAGING_INSTALL_PREFIX "/tmp/${PROJECT_NAME}")
 
 # distro packaging
 set(CPACK_GENERATOR "DEB")
+set(CPACK_DEBIAN_PACKAGE_DEPENDS
+	"libc6 (>= 2.28), libgcc1 (>= 1:8)" # arbitrary - as example
+	)
+set(CPACK_DEBIAN_PACKAGE_MAINTAINER "PackageMaintainer")
+
 
 include(CPack)
 
