CMakeLists.txt added a few comments

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,9 @@
 
+# The well documented CMake command
 cmake_minimum_required(VERSION 3.10)
 
+# This project
+# Note that the version and description are propagated to the DEB package
 project(
 	ExampleOfCMake
 	VERSION 1.2.3
@@ -8,20 +11,23 @@ project(
 	LANGUAGES CXX
 	)
 
-# Genreal package compile configuration
-# Note: can use target_compile_features() to customize individual target flags
+# General package compile configuration
+# Note: can use target_compile_features() to customize for individual target
 add_compile_options(-std=c++11 -pedantic)
 
-# unit test capabilities - enable before add_subdirectory() calls
+# unit test capabilities
+# Include and enable here for enable to be inherited by subdir tree
 include(CTest)
 enable_testing()
 
-# project tree
+# Inform CMake about project tree
+# (each subdir needs its own CMakeLists.txt file)
 add_subdirectory(inc) # project library public interface (e.g. c++ headers)
 add_subdirectory(src) # project source code
-add_subdirectory(tst) # unit tests (check source code operation)
-add_subdirectory(vnv) # user/app validation tests
+add_subdirectory(tst) # developer unit tests (check source code operation)
+add_subdirectory(vnv) # user validation tests
 
+# Specify various generic-package distribuation properties
 # set(CPACK_PACKAGE_NAME ${PROJECT_NAME}) # same as default
 set(CPACK_PACKAGE_VENDOR "PackageVendor") # ? not used by debian generator?
 set(CPACK_PACKAGE_VERSION_MAJOR ${PROJECT_VERSION_MAJOR})
@@ -34,7 +40,7 @@ set(CPACK_PACKAGE_VERSION_TWEAK ${PROJECT_VERSION_TWEAK})
 # - but here, set package to isolated location for easier/safer testing
 set(CPACK_PACKAGING_INSTALL_PREFIX "/tmp/${PROJECT_NAME}")
 
-# distro packaging
+# Set package(Generator) specific characteristics
 set(CPACK_GENERATOR "DEB")
 set(CPACK_DEBIAN_PACKAGE_DEPENDS
 	"libc6 (>= 2.28), libgcc1 (>= 1:8)" # arbitrary - as example
@@ -42,5 +48,6 @@ set(CPACK_DEBIAN_PACKAGE_DEPENDS
 set(CPACK_DEBIAN_PACKAGE_MAINTAINER "PackageMaintainer")
 
 
+# Must be included after the package variables are set
 include(CPack)
 
