--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,20 +1,21 @@
 
 
+# Library (e.g. libexIcf.a) will be created and installed
 set(modLibName exIfc)
-set(modLibSources ifc_public.cpp ifc_local.cpp ifc_other.cpp)
 
-message("{modLibName}: " ${modLibName})
+# list of sources on which library depends
+set(modLibSources
+
+	ifc_public.cpp
+	ifc_local.cpp
+	ifc_other.cpp
+	
+	)
 
 add_library(
 	${modLibName}
 	STATIC ${modLibSources}
 	)
-
-# target specific overrides
-#target_compile_features(
-#	${modLibName}
-#	PRIVATE cxx_std_11
-#	)
 
 target_include_directories(
 	${modLibName}
@@ -22,9 +23,6 @@ target_include_directories(
 	PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}
 	)
 
-
-# message("PROJECT_NAME: " ${PROJECT_NAME})
-# message("CMAKE_INSTALL_PREFIX: " ${CMAKE_INSTALL_PREFIX})
 install(
 	TARGETS ${modLibName}
 	ARCHIVE
