CMakeLists.txt added initial creation of *Config.cmake file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,65 @@ add_subdirectory(src) # project source code
 add_subdirectory(tst) # developer unit tests (check source code operation)
 add_subdirectory(vnv) # user validation tests
 
+
+# src/library from: set(modLibName exIfc)
+
+# Export cmake configuration files
+
+set_property(
+	TARGET exIfc
+	PROPERTY VERSION ${ExampleOfCMake_VERSION}
+	)
+set_property(
+	TARGET exIfc
+	PROPERTY VERSION INTERFACE_ExampleOfCMake_MAJOR_VERSION 1
+	)
+set_property(
+	TARGET exIfc
+	APPEND PROPERTY COMPATIBLE_INTERFACE_STRING ExampleOfCMake_MAJOR_VERSION
+	)
+
+include(CMakePackageConfigHelpers)
+
+write_basic_package_version_file(
+	"${CMAKE_CURRENT_BINARY_DIR}/exIfc/exIfcConfigVersion.cmake"
+	VERSION ${ExampleOfCMake_VERSION}
+	COMPATIBILITY AnyNewerVersion
+	)
+export(
+	EXPORT exIfcTargets
+	FILE "${CMAKE_CURRENT_BINARY_DIR}/exIfc/exIfcTargets.cmake"
+	NAMESPACE ExampleOfCMake::
+	)
+configure_file(
+	cmake/exIfcConfig.cmake
+	"${CMAKE_CURRENT_BINARY_DIR}/exIfc/exIfcConfig.cmake"
+	COPYONLY
+	)
+
+set(ConfigPackageLocation lib/cmake/exIfc)
+install(
+	EXPORT exIfcTargets
+	FILE exIfcTargets.cmake
+	NAMESPACE ExampleOfCMake::
+	DESTINATION ${ConfigPackageLocation}
+	#	COMPONENT Devel
+	)
+install(
+	FILES
+		cmake/exIfcConfig.cmake
+		"${CMAKE_CURRENT_BINARY_DIR}/exIfc/exIfcConfigVersion.cmake"
+	DESTINATION ${ConfigPackageLocation}
+	#	COMPONENT Devel
+	)
+
+
+
+# Override default install location for testing this package
+# In general default (no command here) will install to /usr/{lib,bin,...}
+# - but here, set package to isolated location for easier/safer testing
+set(CPACK_PACKAGING_INSTALL_PREFIX "/tmp/local/${PROJECT_NAME}")
+
 # Specify various generic-package distribuation properties
 # set(CPACK_PACKAGE_NAME ${PROJECT_NAME}) # same as default
 set(CPACK_PACKAGE_VENDOR "PackageVendor") # ? not used by debian generator?
@@ -34,11 +93,6 @@ set(CPACK_PACKAGE_VERSION_MAJOR ${PROJECT_VERSION_MAJOR})
 set(CPACK_PACKAGE_VERSION_MINOR ${PROJECT_VERSION_MINOR})
 set(CPACK_PACKAGE_VERSION_PATCH ${PROJECT_VERSION_PATCH})
 set(CPACK_PACKAGE_VERSION_TWEAK ${PROJECT_VERSION_TWEAK})
-
-# Override default install location for testing this package
-# In general default (no command here) will install to /usr/{lib,bin,...}
-# - but here, set package to isolated location for easier/safer testing
-set(CPACK_PACKAGING_INSTALL_PREFIX "/tmp/${PROJECT_NAME}")
 
 # Set package(Generator) specific characteristics
 set(CPACK_GENERATOR "DEB")
